--- a/secciones/style.css
+++ b/secciones/style.css
@@ -5,7 +5,7 @@
     top:0;
     width: 100%;
     height:auto;
-    background-color:#000000;
+    background-image:linear-gradient(rgb(0, 0, 0),rgb(62, 62, 62));
     z-index:100;
     border-bottom: 0.2rem solid rgb(55, 55, 56);
 }
@@ -83,13 +83,13 @@
         
     }
 
-.li-flex1 {order:2;}
+.flex1 {order:2;}
 
-.li-flex2 {order:1;}
+.flex2 {order:1;}
 
-.li-flex3 {order:3;}
+.flex3 {order:3;}
 
-#barra{
+.barra{
     position:fixed;
     top: 50%;
     left: 5px;
@@ -261,7 +261,7 @@ p{color: #ddd;
     background:transparent;
 }
 
-#contacto{
+.contacto{
     background-color:rgb(82, 84, 81);
 }
 
@@ -293,28 +293,28 @@ p{color: #ddd;
     resize:none;
 }
 
-#talampaya {background-image:url(../imagenes/talampaya2.jpg);
+.talampaya {background-image:url(../imagenes/talampaya2.jpg);
             background-attachment: fixed;
             background-position: center;
             background-size:cover;
             background-repeat: no-repeat;
 }
 
-#glaciar {background-image:url(../imagenes/glaciar4.jpg);
+.glaciar {background-image:url(../imagenes/glaciar4.jpg);
     background-attachment: fixed;
     background-position: center;
     background-size:cover;
     background-repeat: no-repeat;
 }
 
-#valle {background-image:url(../imagenes/Valledelaluna5.jpg);
+.valle {background-image:url(../imagenes/Valledelaluna5.jpg);
     background-attachment: fixed;
     background-position: center;
     background-size:cover;
     background-repeat: no-repeat;
 }
 
-#cataratas {background-image:url(../imagenes/Cataratas1.jpg);
+.cataratas {background-image:url(../imagenes/Cataratas1.jpg);
     background-attachment: fixed;
     background-position: center;
     background-size:cover;
@@ -399,11 +399,11 @@ h2{color: #f1f1f1;}
 
 #navbar {justify-content: flex-start;} 
 
-.li-flex1 {order:1;}
+.flex1 {order:1;}
 
-.li-flex2 {order:2;}
+.flex2 {order:2;}
 
-.li-flex3 {order:3;}
+.flex3 {order:3;}
 
 .abajo--izquierda {
     margin: 33rem 0 0 5rem;
