--- a/secciones/style.css
+++ b/secciones/style.css
@@ -1,4 +1,4 @@
-#navbar{
+.navbar{
     display: flex;
     justify-content: center;
     position:sticky;
@@ -17,7 +17,7 @@
     font-size: 1em;
     border: none;
     font-weight: bold;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;
   }
 
 .img-logo {
@@ -37,6 +37,7 @@
 }
 
 .navbar--ul--li--a {
+    font-family: 'Poppins', sans-serif;
     display: inline-block;
     margin-left:1rem;
     text-decoration: none;
@@ -44,7 +45,6 @@
     padding: 1em;
     font-size: 1em;
     font-weight: bold;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .navbar--ul--li--a:hover{
@@ -58,12 +58,13 @@
 }
     
 .menu1 {
-      display: none;
-      position: absolute;
-      background-color: #f1f1f1;
-      min-width: 160px;
-      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-      z-index: 1;
+    font-family: 'Poppins', sans-serif;
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
         }
   
   .menu1 a {
@@ -90,6 +91,7 @@
 .flex3 {order:3;}
 
 .barra{
+    list-style: none;
     position:fixed;
     top: 50%;
     left: 5px;
@@ -111,7 +113,7 @@
     text-align: center;
     font-size: 2em;
     padding:1em;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-weight: bold;
 }
 
@@ -140,7 +142,7 @@ p{color: #ddd;
     
 }
 
-#d2{
+.d2{
     background-image: url(../imagenes/talampaya2.jpg);
     width:100%;
     height: 50rem;
@@ -149,10 +151,10 @@ p{color: #ddd;
     grid-area: talampaya;
 }
 .abajo--izquierda {
-    margin: 22rem 0 0 5rem;
+    margin: 18rem 0 0 5rem;
 }
 
-#d3{
+.d3{
     background-image: url(../imagenes/glaciar.jpg);
     width:100%;    
     height: 50rem; 
@@ -165,8 +167,8 @@ p{color: #ddd;
                 margin:0 0 0 5rem;
         }
 
-.info-lugares {width: 80%;
-                font-family: sans-serif;
+.info-lugares   {width: 80%;
+                font-family: 'Poppins', sans-serif;
                 background-color: rgb(0, 0, 0);
                 opacity: 0.9;
                 padding:5px;
@@ -178,7 +180,7 @@ p{color: #ddd;
 .boton-info {
     margin:0 0 0 2rem;
     padding: 0.5rem;
-    font-size: large;
+    font-family: 'Poppins', sans-serif;
     border-radius: 3px;
     background-color: #000000;
     color: #ddd;
@@ -190,7 +192,7 @@ p{color: #ddd;
     transition: 1s;
 }
 
-#d4{
+.d4{
     background-image: url(../imagenes/Valledelaluna.jpg);
     width:100%;
     height: 50rem; 
@@ -199,7 +201,7 @@ p{color: #ddd;
     grid-area: valle;
 }
 
-#d5{
+.d5{
     background-image: url(../imagenes/cataratas2.jpg);
     width:100%;
     height: 50rem; 
@@ -209,6 +211,7 @@ p{color: #ddd;
 }
 
 .footer{
+        font-family: 'Poppins', sans-serif;
         width: 100%;
         height:3rem;
         background-color:#000000;
@@ -251,6 +254,8 @@ p{color: #ddd;
     }
 
 .form--div {
+    font-weight: bold;
+    font-family: 'Poppins', sans-serif;
     margin: 1rem 2rem;
 }
 
@@ -262,7 +267,7 @@ p{color: #ddd;
 }
 
 .contacto{
-    background-color:rgb(82, 84, 81);
+    background-image: linear-gradient(rgb(121, 117, 117),rgb(0, 0, 0));
 }
 
 .contacto--section--div{
@@ -289,6 +294,7 @@ p{color: #ddd;
 }
 
 .form textarea {
+    font-family: 'Poppins', sans-serif;
     min-height: 10rem;
     resize:none;
 }
@@ -345,11 +351,12 @@ h2{color: #f1f1f1;}
     text-align: center;
     font-size: 1.5rem;
     padding: 2rem 0 2rem 0;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;;
     font-weight: bold;
 }
 
 .seccion-lugares--p {
+    font-family: 'Poppins', sans-serif;
     text-align: center;
     line-height: 2rem;
     margin:auto;
@@ -380,7 +387,21 @@ h2{color: #f1f1f1;}
     list-style:none;
     width:30rem;}
 
+.animate__animated.animate__bounceInRight{
+    --animate-duration: 2.5s;
+}
 
+.animate__animated.animate__fadeIn{
+    --animate-duration: 2.5s;
+}
+
+.animate__animated.animate__bounceInUp{
+    --animate-duration: 2.5s;
+}
+
+.animate__animated.animate__bounceInDownt{
+    --animate-duration: 2.5s;
+}
 
 
 
@@ -397,7 +418,7 @@ h2{color: #f1f1f1;}
     ;
     }
 
-#navbar {justify-content: flex-start;} 
+.navbar {justify-content: flex-start;} 
 
 .flex1 {order:1;}
 
