--- a/secciones/style.css
+++ b/secciones/style.css
@@ -1,4 +1,4 @@
-.navbar{
+.navbar{    
     display: flex;
     justify-content: center;
     position:sticky;
@@ -21,10 +21,11 @@
   }
 
 .img-logo {
-    margin-left:1rem;
+    margin-left: 1rem;
     width:3rem;}
 
 .navbar--ul {display: flex;
+    padding-left: 0;
     flex-direction: row;
     align-items: center;
     justify-content: center;
@@ -53,7 +54,6 @@
 }
 
 .dropdown {
-    margin-left:1rem;
     display: inline-block;
 }
     
@@ -91,12 +91,12 @@
 .flex3 {order:3;}
 
 .barra{
+    padding-left: 0;
     list-style: none;
     position:fixed;
     top: 50%;
-    left: 5px;
     height: 400px;
-    width: 4%;
+    width: 5%;
     border-radius:30px;
     z-index: 100;
 }
@@ -144,23 +144,19 @@ p{color: #ddd;
 
 .d2{
     background-image: url(../imagenes/talampaya2.jpg);
-    width:100%;
     height: 50rem;
     background-repeat: no-repeat;
     background-size:cover;
-    grid-area: talampaya;
 }
 .abajo--izquierda {
-    margin: 18rem 0 0 5rem;
+    margin: 16rem 0 0 5rem;
 }
 
 .d3{
-    background-image: url(../imagenes/glaciar.jpg);
-    width:100%;    
+    background-image: url(../imagenes/glaciar.jpg);    
     height: 50rem; 
     background-repeat: no-repeat;
     background-size: cover;
-    grid-area: glaciar;
 }
 
 .arriba--izquierda {
@@ -172,7 +168,7 @@ p{color: #ddd;
                 background-color: rgb(0, 0, 0);
                 opacity: 0.9;
                 padding:5px;
-                border-radius: 3px;
+                border-radius: 0.7rem;
                 text-align: center;
                 margin: 2rem;
 }
@@ -194,20 +190,17 @@ p{color: #ddd;
 
 .d4{
     background-image: url(../imagenes/Valledelaluna.jpg);
-    width:100%;
+    
     height: 50rem; 
     background-repeat: no-repeat;
     background-size: cover;
-    grid-area: valle;
 }
 
 .d5{
     background-image: url(../imagenes/cataratas2.jpg);
-    width:100%;
     height: 50rem; 
     background-repeat: no-repeat;
     background-size: cover;
-    grid-area: cataratas;
 }
 
 .footer{
@@ -219,7 +212,7 @@ p{color: #ddd;
 }
 
   .bar-icon {width: 80%;
-            margin:10%;
+            margin:15%;
             min-width: 2rem;
     }
 
@@ -356,6 +349,7 @@ h2{color: #f1f1f1;}
 }
 
 .seccion-lugares--p {
+    padding-top:2rem;
     font-family: 'Poppins', sans-serif;
     text-align: center;
     line-height: 2rem;
@@ -403,7 +397,10 @@ h2{color: #f1f1f1;}
     --animate-duration: 2.5s;
 }
 
-
+.carousel_width {
+    margin:auto;
+    width:90%;
+}
 
 
 
@@ -411,12 +408,6 @@ h2{color: #f1f1f1;}
 
 
 @media screen and (min-width:1024px) {
-.grid-index {
-    grid-template-areas:
-    "talampaya glaciar"
-    "valle cataratas"
-    ;
-    }
 
 .navbar {justify-content: flex-start;} 
 
@@ -438,6 +429,14 @@ h2{color: #f1f1f1;}
 
 .seccion-lugares--p {padding:0 5rem;
 
+}
+
+.dropdown {
+    margin-left:1rem;
+}
+
+.barra {
+    width:4%;
 }
 
 }
