--- a/secciones/style.css
+++ b/secciones/style.css
@@ -1,94 +1,25 @@
-.navbar{    
-    display: flex;
-    justify-content: center;
+.sticky-nav {
     position:sticky;
     top:0;
     width: 100%;
     height:auto;
+    z-index: 100;
+}
+
+.navbar{    
+    display: flex;
+    justify-content: center;
     background-image:linear-gradient(rgb(0, 0, 0),rgb(62, 62, 62));
     z-index:100;
     border-bottom: 0.2rem solid rgb(55, 55, 56);
 }
 
-.boton--navbar {
-    background-color: transparent;
-    color: rgb(255, 255, 255);
-    padding: 1em;
-    font-size: 1em;
-    border: none;
-    font-weight: bold;
+.poppins {
     font-family: 'Poppins', sans-serif;
-  }
+}
 
 .img-logo {
-    margin-left: 1rem;
     width:3rem;}
-
-.navbar--ul {display: flex;
-    padding-left: 0;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    margin:1rem;
-    list-style: none;}    
-
-.navbar--ul--li {
-    display:inline-block;
-}
-
-.navbar--ul--li--a {
-    font-family: 'Poppins', sans-serif;
-    display: inline-block;
-    margin-left:1rem;
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-    padding: 1em;
-    font-size: 1em;
-    font-weight: bold;
-}
-
-.navbar--ul--li--a:hover{
-    background-color: #9fa79f;
-    transition: 1s;
-}
-
-.dropdown {
-    display: inline-block;
-}
-    
-.menu1 {
-    font-family: 'Poppins', sans-serif;
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-        }
-  
-  .menu1 a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  .menu1 a:hover {background-color: #ddd;}
-  
-  .dropdown:hover .menu1 {display: block;}
-  
-  .dropdown:hover .boton--navbar {
-        background-color: #9fa79f;
-        transition: 1s;
-        
-    }
-
-.flex1 {order:2;}
-
-.flex2 {order:1;}
-
-.flex3 {order:3;}
 
 .barra{
     padding-left: 0;
@@ -205,7 +136,6 @@ p{color: #ddd;
 
 .footer{
         font-family: 'Poppins', sans-serif;
-        width: 100%;
         height:3rem;
         background-color:#000000;
         border-top:0.2rem solid rgb(55, 55, 56);
@@ -325,8 +255,6 @@ h1{color: #f1f1f1;}
 h2{color: #f1f1f1;}
 
 .seccion-lugares {
-    margin:auto;
-    width:100%;
     background-color: #000000;
 }
 
@@ -409,19 +337,16 @@ h2{color: #f1f1f1;}
 
 @media screen and (min-width:1024px) {
 
-.navbar {justify-content: flex-start;} 
-
-.flex1 {order:1;}
-
-.flex2 {order:2;}
-
-.flex3 {order:3;}
+.img-logo {
+    margin-left: 1rem;
+}
 
 .abajo--izquierda {
     margin: 33rem 0 0 5rem;
 }
 
 .seccion-lugares {width:85%;
+    margin:auto;
 }
 
 #s1 {height:54rem;
@@ -430,11 +355,6 @@ h2{color: #f1f1f1;}
 .seccion-lugares--p {padding:0 5rem;
 
 }
-
-.dropdown {
-    margin-left:1rem;
-}
-
 .barra {
     width:4%;
 }
