--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -15,3 +15,15 @@
   .img-logo {
     width: 3rem;
   }
+
+  @media screen and (min-width: 1024px) {
+    .sticky-nav {
+      position: sticky;
+      top: 0;
+    }
+
+    .img-logo {
+      margin-left: 1rem;
+    }
+  
+  }
